Add lake selection and run button to trigger MIKE HD model run and load the resulting netcdf file.

--- a/js/templates/panel/model.html
+++ b/js/templates/panel/model.html
@@ -1,4 +1,4 @@
-<div class="panel-default panel">
+<!-- <div class="panel-default panel"> -->
     <div class="panel-heading">
         <span>Model Settings</span> 
         <div class="advanced-edit edit add"></div>
@@ -9,6 +9,14 @@
                 <label class="col-sm-4 control-label" for="name">Incident Name</label>
                 <div class="col-sm-6">
                     <input type="text" class="form-control" id="name" name="name" value="{{ name }}">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-4 control-label" for="lake">Lake</label>
+                <div class="col-sm-6">
+                    <select class="form-control mousetrap" id="lake" name="lake">
+                        <option value = 'Lake St. Clair'>Lake St. Clair</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
@@ -44,7 +52,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-offset-1">
+                <div class="col-sm-6">
                     <div class="checkbox">
                         <label>
                             {% if(uncertain){ %}
@@ -56,6 +64,10 @@
                         </label>
                     </div>
                 </div>
+                <div class="col-sm-3">
+                    <button type="button" class="location btn btn-primary btn-block" id="run_hd">Run HD</button>
+                    <label class="control-label" id='model_status' hidden>HD Model is Running ...</label>
+                </div>                
             </div>
         </form>
     </div>
