align label to left

--- a/js/templates/panel/model.html
+++ b/js/templates/panel/model.html
@@ -64,9 +64,9 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                     <button type="button" class="location btn btn-primary btn-block" id="run_hd">Run HD</button>
-                    <label class="control-label" id='model_status' hidden>HD Model is Running ...</label>
+                    <label class="control-label" id='model_status' style='text-align: left' hidden>HD Model is Running ...</label>
                 </div>                
             </div>
         </form>
