Before working on surface concentration

--- a/js/templates/attributes/panel.html
+++ b/js/templates/attributes/panel.html
@@ -1,6 +1,6 @@
 <div class="panel-heading">
     <a class="pull-right"> <span class="glyphicon glyphicon-collapse-down expand"> </span></a>
-    <div title='These are object attributes that do not typically need to be changed. Editing these parameters may result in model failure.'>Advanced Settings - {{ title }}</div>
+    <div title='These are object attributes that do not typically need to be changed. Editing these parameters may result in model failure.'>gnome.outputters.json.SpillJsonOutput - {{ title }}</div>
 </div>
 <div class="panel-body collapse" id="attributes">
     
