Add Lake Erie option

--- a/js/templates/panel/model.html
+++ b/js/templates/panel/model.html
@@ -16,6 +16,7 @@
                 <div class="col-sm-6">
                     <select class="form-control mousetrap" id="lake" name="lake">
                         <option value = 'Lake St. Clair'>Lake St. Clair</option>
+                        <option value = 'Lake Erie'>Lake Erie</option>
                     </select>
                 </div>
             </div>
